// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using WeatherUserActions.Data;

#nullable disable

namespace WeatherUserActions.Migrations
{
    [DbContext(typeof(WeatherUserActionsDbContext))]
    [Migration("20260903074422_SplitAnalyticsReportBatch")]
    partial class SplitAnalyticsReportBatch
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.10")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("WeatherUserActions.Models.AnalyticsReport", b =>
                {
                    b.Property<int>("ReportId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("ReportId"));

                    b.Property<Guid>("BatchId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<int>("ServiceId")
                        .HasColumnType("int");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.HasKey("ReportId");

                    b.HasIndex("BatchId");

                    b.HasIndex("ServiceId");

                    b.HasIndex("Status");

                    b.ToTable("AnalyticsReports");
                });

            modelBuilder.Entity("WeatherUserActions.Models.AnalyticsReportBatch", b =>
                {
                    b.Property<Guid>("BatchId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<DateOnly>("DateRangeEnd")
                        .HasColumnType("date");

                    b.Property<DateOnly>("DateRangeStart")
                        .HasColumnType("date");

                    b.Property<DateTime?>("DeliveredAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("Format")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("UserId")
                        .IsRequired()
                        .HasMaxLength(128)
                        .HasColumnType("nvarchar(128)");

                    b.HasKey("BatchId");

                    b.HasIndex("DeliveredAt")
                        .HasFilter("[DeliveredAt] IS NULL");

                    b.HasIndex("UserId");

                    b.ToTable("AnalyticsReportBatches");
                });

            modelBuilder.Entity("WeatherUserActions.Models.AnalyticsReportCityMetric", b =>
                {
                    b.Property<int>("AnalyticsReportCityMetricId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("AnalyticsReportCityMetricId"));

                    b.Property<decimal?>("AvgHumidity")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.Property<decimal?>("AvgTemperature")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.Property<decimal?>("AvgWindSpeed")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.Property<int>("CityId")
                        .HasColumnType("int");

                    b.Property<int>("DangerDayCount")
                        .HasColumnType("int");

                    b.Property<decimal?>("MaxHumidity")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.Property<decimal?>("MaxTemperature")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.Property<decimal?>("MaxWindSpeed")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.Property<decimal?>("MinHumidity")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.Property<decimal?>("MinTemperature")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.Property<decimal?>("MinWindSpeed")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.Property<int>("ReportId")
                        .HasColumnType("int");

                    b.Property<int>("SampleCount")
                        .HasColumnType("int");

                    b.Property<decimal?>("StdDevHumidity")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.Property<decimal?>("StdDevTemperature")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.Property<decimal?>("StdDevWindSpeed")
                        .HasPrecision(6, 2)
                        .HasColumnType("decimal(6,2)");

                    b.HasKey("AnalyticsReportCityMetricId");

                    b.HasIndex("CityId");

                    b.HasIndex("ReportId", "CityId")
                        .IsUnique();

                    b.ToTable("AnalyticsReportCityMetrics");
                });

            modelBuilder.Entity("WeatherUserActions.Models.City", b =>
                {
                    b.Property<int>("CityId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("CityId"));

                    b.Property<string>("Country")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<decimal>("Latitude")
                        .HasPrecision(11, 8)
                        .HasColumnType("decimal(11,8)");

                    b.Property<decimal>("Longitude")
                        .HasPrecision(11, 8)
                        .HasColumnType("decimal(11,8)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.HasKey("CityId");

                    b.HasIndex("Name", "Country", "Latitude", "Longitude")
                        .IsUnique();

                    b.ToTable("Cities", t =>
                        {
                            t.HasCheckConstraint("CK_Cities_Latitude", "[Latitude] >= -90 AND [Latitude] <= 90");

                            t.HasCheckConstraint("CK_Cities_Longitude", "[Longitude] >= -180 AND [Longitude] <= 180");
                        });
                });

            modelBuilder.Entity("WeatherUserActions.Models.CitySite", b =>
                {
                    b.Property<int>("CitySiteId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("CitySiteId"));

                    b.Property<int>("CityId")
                        .HasColumnType("int");

                    b.Property<int>("ServiceId")
                        .HasColumnType("int");

                    b.HasKey("CitySiteId");

                    b.HasIndex("ServiceId");

                    b.HasIndex("CityId", "ServiceId")
                        .IsUnique();

                    b.ToTable("CitySites");
                });

            modelBuilder.Entity("WeatherUserActions.Models.Forecast", b =>
                {
                    b.Property<int>("ForecastId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("ForecastId"));

                    b.Property<int>("CitySiteId")
                        .HasColumnType("int");

                    b.Property<bool>("DangerFlag")
                        .HasColumnType("bit");

                    b.Property<decimal>("Humidity")
                        .HasPrecision(5, 2)
                        .HasColumnType("decimal(5,2)");

                    b.Property<DateTime>("RetrievedAt")
                        .HasColumnType("datetime2");

                    b.Property<decimal>("Temperature")
                        .HasPrecision(3, 1)
                        .HasColumnType("decimal(3,1)");

                    b.Property<DateTime>("Timestamp")
                        .HasColumnType("datetime2");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<decimal>("WindSpeed")
                        .HasPrecision(5, 2)
                        .HasColumnType("decimal(5,2)");

                    b.HasKey("ForecastId");

                    b.HasIndex("CitySiteId", "Timestamp", "Type")
                        .IsUnique();

                    b.ToTable("Forecasts", t =>
                        {
                            t.HasCheckConstraint("CK_Forecasts_Humidity", "[Humidity] >= 0 AND [Humidity] <= 100");

                            t.HasCheckConstraint("CK_Forecasts_Temperature", "[Temperature] >= -90 AND [Temperature] <= 60");

                            t.HasCheckConstraint("CK_Forecasts_WindSpeed", "[WindSpeed] >= 0 AND [WindSpeed] <= 253");
                        });
                });

            modelBuilder.Entity("WeatherUserActions.Models.ForecastingService", b =>
                {
                    b.Property<int>("ServiceId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("ServiceId"));

                    b.Property<string>("ApiEndpoint")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("ServiceId");

                    b.ToTable("ForecastingServices");
                });

            modelBuilder.Entity("WeatherUserActions.Models.Notification", b =>
                {
                    b.Property<int>("NotificationId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("NotificationId"));

                    b.Property<string>("Channel")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("ForecastId")
                        .HasColumnType("int");

                    b.Property<DateTime>("SentAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("UserId")
                        .IsRequired()
                        .HasMaxLength(128)
                        .HasColumnType("nvarchar(128)");

                    b.HasKey("NotificationId");

                    b.HasIndex("ForecastId");

                    b.HasIndex("UserId");

                    b.ToTable("Notifications");
                });

            modelBuilder.Entity("WeatherUserActions.Models.Rating", b =>
                {
                    b.Property<int>("RatingId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("RatingId"));

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<int>("ForecastId")
                        .HasColumnType("int");

                    b.Property<DateTime>("UpdatedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("UserId")
                        .IsRequired()
                        .HasMaxLength(128)
                        .HasColumnType("nvarchar(128)");

                    b.Property<int>("Value")
                        .HasColumnType("int");

                    b.HasKey("RatingId");

                    b.HasIndex("ForecastId");

                    b.HasIndex("UserId", "ForecastId")
                        .IsUnique();

                    b.ToTable("Ratings");
                });

            modelBuilder.Entity("WeatherUserActions.Models.User", b =>
                {
                    b.Property<string>("UserId")
                        .HasMaxLength(128)
                        .HasColumnType("nvarchar(128)");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.HasKey("UserId");

                    b.ToTable("Users");
                });

            modelBuilder.Entity("WeatherUserActions.Models.UserCitySite", b =>
                {
                    b.Property<string>("UserId")
                        .HasMaxLength(128)
                        .HasColumnType("nvarchar(128)");

                    b.Property<int>("CitySiteId")
                        .HasColumnType("int");

                    b.Property<DateTime>("AddedAt")
                        .HasColumnType("datetime2");

                    b.HasKey("UserId", "CitySiteId");

                    b.HasIndex("CitySiteId");

                    b.ToTable("UserCitySites");
                });

            modelBuilder.Entity("WeatherUserActions.Models.UserService", b =>
                {
                    b.Property<string>("UserId")
                        .HasMaxLength(128)
                        .HasColumnType("nvarchar(128)");

                    b.Property<int>("ServiceId")
                        .HasColumnType("int");

                    b.Property<DateTime>("AddedAt")
                        .HasColumnType("datetime2");

                    b.HasKey("UserId", "ServiceId");

                    b.HasIndex("ServiceId");

                    b.ToTable("UserServices");
                });

            modelBuilder.Entity("WeatherUserActions.Models.AnalyticsReport", b =>
                {
                    b.HasOne("WeatherUserActions.Models.AnalyticsReportBatch", "Batch")
                        .WithMany("Reports")
                        .HasForeignKey("BatchId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("WeatherUserActions.Models.ForecastingService", "Service")
                        .WithMany()
                        .HasForeignKey("ServiceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Batch");

                    b.Navigation("Service");
                });

            modelBuilder.Entity("WeatherUserActions.Models.AnalyticsReportBatch", b =>
                {
                    b.HasOne("WeatherUserActions.Models.User", "User")
                        .WithMany("AnalyticsReportBatches")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("WeatherUserActions.Models.AnalyticsReportCityMetric", b =>
                {
                    b.HasOne("WeatherUserActions.Models.City", "City")
                        .WithMany()
                        .HasForeignKey("CityId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("WeatherUserActions.Models.AnalyticsReport", "Report")
                        .WithMany("CityMetrics")
                        .HasForeignKey("ReportId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("City");

                    b.Navigation("Report");
                });

            modelBuilder.Entity("WeatherUserActions.Models.CitySite", b =>
                {
                    b.HasOne("WeatherUserActions.Models.City", "City")
                        .WithMany("CitySites")
                        .HasForeignKey("CityId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("WeatherUserActions.Models.ForecastingService", "Service")
                        .WithMany("CitySites")
                        .HasForeignKey("ServiceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("City");

                    b.Navigation("Service");
                });

            modelBuilder.Entity("WeatherUserActions.Models.Forecast", b =>
                {
                    b.HasOne("WeatherUserActions.Models.CitySite", "CitySite")
                        .WithMany("Forecasts")
                        .HasForeignKey("CitySiteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("CitySite");
                });

            modelBuilder.Entity("WeatherUserActions.Models.Notification", b =>
                {
                    b.HasOne("WeatherUserActions.Models.Forecast", "Forecast")
                        .WithMany("Notifications")
                        .HasForeignKey("ForecastId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("WeatherUserActions.Models.User", "User")
                        .WithMany("Notifications")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Forecast");

                    b.Navigation("User");
                });

            modelBuilder.Entity("WeatherUserActions.Models.Rating", b =>
                {
                    b.HasOne("WeatherUserActions.Models.Forecast", "Forecast")
                        .WithMany("Ratings")
                        .HasForeignKey("ForecastId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("WeatherUserActions.Models.User", "User")
                        .WithMany("Ratings")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Forecast");

                    b.Navigation("User");
                });

            modelBuilder.Entity("WeatherUserActions.Models.UserCitySite", b =>
                {
                    b.HasOne("WeatherUserActions.Models.CitySite", "CitySite")
                        .WithMany("UserCitySites")
                        .HasForeignKey("CitySiteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("WeatherUserActions.Models.User", "User")
                        .WithMany("UserCitySites")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("CitySite");

                    b.Navigation("User");
                });

            modelBuilder.Entity("WeatherUserActions.Models.UserService", b =>
                {
                    b.HasOne("WeatherUserActions.Models.ForecastingService", "Service")
                        .WithMany("UserServices")
                        .HasForeignKey("ServiceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("WeatherUserActions.Models.User", "User")
                        .WithMany("UserServices")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Service");

                    b.Navigation("User");
                });

            modelBuilder.Entity("WeatherUserActions.Models.AnalyticsReport", b =>
                {
                    b.Navigation("CityMetrics");
                });

            modelBuilder.Entity("WeatherUserActions.Models.AnalyticsReportBatch", b =>
                {
                    b.Navigation("Reports");
                });

            modelBuilder.Entity("WeatherUserActions.Models.City", b =>
                {
                    b.Navigation("CitySites");
                });

            modelBuilder.Entity("WeatherUserActions.Models.CitySite", b =>
                {
                    b.Navigation("Forecasts");

                    b.Navigation("UserCitySites");
                });

            modelBuilder.Entity("WeatherUserActions.Models.Forecast", b =>
                {
                    b.Navigation("Notifications");

                    b.Navigation("Ratings");
                });

            modelBuilder.Entity("WeatherUserActions.Models.ForecastingService", b =>
                {
                    b.Navigation("CitySites");

                    b.Navigation("UserServices");
                });

            modelBuilder.Entity("WeatherUserActions.Models.User", b =>
                {
                    b.Navigation("AnalyticsReportBatches");

                    b.Navigation("Notifications");

                    b.Navigation("Ratings");

                    b.Navigation("UserCitySites");

                    b.Navigation("UserServices");
                });
#pragma warning restore 612, 618
        }
    }
}
