@startuml Weather_Forecasts_ER_Diagram

title Weather Forecasts System - Entity-Relationship Diagram

hide circle
skinparam linetype ortho

entity "User" as user {
  * user_id : INT <<PK>>
  --
  created_at : DATETIME
  ..
  No username/email/password
  stored here. All account data
  lives only in the Auth Service
  (Appwrite Authentication),
  keyed by the same user_id
  (Appwrite user id / $id). Row is
  created lazily (JIT) on first login.
  Whenever a username or email
  is needed (e.g. danger-forecast
  notifications, UC8 analytics
  report delivery), the app fetches
  it from Auth by user_id on demand
  - single lookup for one user, or a
  batch lookup (up to 100 ids
  per call) for many at once.
}

entity "City" as city {
  * city_id : INT <<PK>>
  --
  name : VARCHAR
  country : VARCHAR
  latitude : DECIMAL
  longitude : DECIMAL
}

entity "ForecastingService" as service {
  * service_id : INT <<PK>>
  --
  name : VARCHAR
  api_endpoint : VARCHAR
}

entity "CitySite" as citysite {
  * citysite_id : INT <<PK>>
  --
  city_id : INT <<FK>>
  service_id : INT <<FK>>
  ..
  unique (city_id, service_id)
}

entity "UserCitySite" as user_citysite {
  * user_id : INT <<PK, FK>>
  * citysite_id : INT <<PK, FK>>
  --
  added_at : DATETIME
}

entity "UserService" as user_service {
  * user_id : INT <<PK, FK>>
  * service_id : INT <<PK, FK>>
  --
  added_at : DATETIME
  ..
  Pending service picks with no
  city yet (e.g. City API was down
  during signup). Cleared once the
  user's first city materializes
  these into UserCitySite rows.
}

entity "Forecast" as forecast {
  * forecast_id : INT <<PK>>
  --
  citysite_id : INT <<FK>>
  timestamp : DATETIME
  type : VARCHAR
  temperature : DECIMAL
  humidity : DECIMAL
  wind_speed : DECIMAL
  danger_flag : BOOLEAN
  retrieved_at : DATETIME
  ..
  unique (citysite_id, timestamp, type)
}

entity "Rating" as rating {
  * rating_id : INT <<PK>>
  --
  user_id : INT <<FK>>
  forecast_id : INT <<FK>>
  value : INT
  created_at : DATETIME
  updated_at : DATETIME
  ..
  unique (user_id, forecast_id)
}

entity "Notification" as notification {
  * notification_id : INT <<PK>>
  --
  user_id : INT <<FK>>
  forecast_id : INT <<FK>>
  channel : VARCHAR
  status : VARCHAR
  sent_at : DATETIME
}

entity "AnalyticsReportBatch" as report_batch {
  * batch_id : UNIQUEIDENTIFIER <<PK>>
  --
  user_id : VARCHAR <<FK>>
  date_range_start : DATE
  date_range_end : DATE
  format : VARCHAR
  created_at : DATETIME
  delivered_at : DATETIME NULL
  ..
  One row per POST /api/analytics
  request. Holds everything shared
  by the request's per-service
  reports: requester, date range,
  delivery format and delivery
  state. format is currently unused
  (always "JSON"). delivered_at is
  set when the batch has been
  emailed.
}

entity "AnalyticsReport" as report {
  * report_id : INT <<PK>>
  --
  batch_id : UNIQUEIDENTIFIER <<FK>>
  service_id : INT <<FK>>
  status : VARCHAR
  ..
  One row per (batch, service). A
  single POST /api/analytics creates
  one AnalyticsReportBatch with one
  of these per selected service.
  status: Queued | Completed | Failed.
}

entity "AnalyticsReportCityMetric" as report_metric {
  * analytics_report_city_metric_id : INT <<PK>>
  --
  report_id : INT <<FK>>
  city_id : INT <<FK>>
  avg_temperature : DECIMAL NULL
  std_dev_temperature : DECIMAL NULL
  min_temperature : DECIMAL NULL
  max_temperature : DECIMAL NULL
  avg_humidity : DECIMAL NULL
  std_dev_humidity : DECIMAL NULL
  min_humidity : DECIMAL NULL
  max_humidity : DECIMAL NULL
  avg_wind_speed : DECIMAL NULL
  std_dev_wind_speed : DECIMAL NULL
  min_wind_speed : DECIMAL NULL
  max_wind_speed : DECIMAL NULL
  danger_day_count : INT
  sample_count : INT
  ..
  Per-city summary for one report
  (one service). Stat columns are
  NULL until generated, or when no
  forecast data exists for that
  city+service in the date range.
}

city    ||--o{ citysite : has
service ||--o{ citysite : offers

user     ||--o{ user_citysite : selects
citysite ||--o{ user_citysite : "selected by"

user    ||--o{ user_service : "selects (pending)"
service ||--o{ user_service : "selected by (pending)"

citysite ||--o{ forecast : "has data for"

user     ||--o{ rating : submits
forecast ||--o{ rating : "rated by"

user     ||--o{ notification : receives
forecast ||--o{ notification : triggers

user         ||--o{ report_batch : requests
report_batch ||--o{ report : "has per-service"
service      ||--o{ report : "covered by"

report ||--o{ report_metric : "has per-city"
city   ||--o{ report_metric : "summarised in"

@enduml
